<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="systemlogin"
    android:title="@string/systemlogin" >
    <PreferenceCategory 
            android:title="@string/message_setting">
    <Preference 
            android:key="key_device_number"
            android:title="@string/device_number" />
    <EditTextPreference
            android:dialogTitle="@string/server_address"
            android:key="key_server_address"
            android:singleLine="true"
            android:defaultValue="@string/value_server_address"
            android:title="@string/server_address" 
            android:summary="@string/value_server_address"/>
    <EditTextPreference
            android:dialogTitle="@string/site_number"
            android:key="key_site_number"
            android:singleLine="true"
            android:summary="@string/value_site_number"
            android:defaultValue="@string/value_site_number"
            android:title="@string/site_number" />
    </PreferenceCategory>
    
    <PreferenceCategory 
            android:title="@string/other_function">
        <Preference 
            android:key="key_package_download" 
            android:title="@string/package_download"
            android:summary="@string/package_download_intr"/>
       <Preference 
            android:key="key_return_fuction" 
            android:title="@string/return_function"
            android:summary="@string/return_fuction_intr"/>
       <Preference 
            android:key="key_quit_function" 
            android:title="@string/quit_function"
            android:summary="@string/quit_function_intr"/>
    </PreferenceCategory>
    
</PreferenceScreen>