<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <!-- Tracking Number -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="@dimen/label_size"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical"
            android:text="@string/label_tracking_number" />

        <EditText
            android:id="@+id/edit_tracking_number"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="@dimen/label_size"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:text="@string/label_amount_collected" />

            <EditText
                android:id="@+id/edit_amount_collected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="1234567890.+-*/%\n()"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="@dimen/label_size"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:text="@string/label_amount_agency" />

            <EditText
                android:id="@+id/edit_amount_agency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="1234567890.+-*/%\n()"
                android:inputType="number" />
        </LinearLayout>
    </LinearLayout>

    <!-- Sign Type -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="@dimen/label_size"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical"
            android:text="@string/label_sign_type" />

        <Spinner
            android:id="@+id/spinner_sign_type"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/sign_type" />
        <CheckBox
            android:id="@+id/sign_type_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/label_sign_type_lock" />
        
    </LinearLayout>

    <!-- Satisfaction Degree -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="@dimen/label_size"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="right|center_vertical"
            android:text="@string/label_satisfaction_degree" />

        <RadioGroup
            android:id="@+id/satisfactory_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/very_satisfactory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/label_very_satisfactory" />

            <RadioButton
                android:id="@+id/satisfactory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_satisfactory" />

            <RadioButton
                android:id="@+id/unsatisfactory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_unsatisfactory" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="@dimen/label_size"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical"
            android:text="@string/label_receipient" />

        <EditText
            android:id="@+id/edit_receipient"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <CheckBox
            android:id="@+id/receipient_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/label_receipient_must_fill" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/text_back" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/label_save" />
    </LinearLayout>

</LinearLayout>