<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        style="@style/CommonButton"
        android:text="@string/quick_pay_sign"
        android:layout_margin="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp" >

        <TextView
            style="@style/CommonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quick_pay_order_num" />

        <EditText
            style="@style/CommonTextEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" 
            android:clickable="false"/>
    </LinearLayout>

    <ListView
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/icon_border"
        android:layout_marginBottom="10dp" >
    </ListView>
    

    <LinearLayout
        style="@style/BottomBar" >

        <Button
            style="@style/BottomBarButton"
            android:text="@string/quick_pay_query_way_bill"
            android:textSize="16sp" />

        <Button
            style="@style/BottomBarButton"
            android:text="@string/back"
            android:textSize="16sp" />

        <Button
            style="@style/BottomBarButton"
            android:text="@string/quick_pay_order_detail"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>