<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/btn_bar_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/app_full_name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/version_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="@string/version"
                android:textSize="20sp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1" >

                <TableRow android:layout_marginTop="20dp" >

                    <TextView
                        android:paddingRight="10dp"
                        android:text="@string/username"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/username_edit"
                        android:inputType="number"
                        android:maxLength="25"
                        android:scrollHorizontally="true"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow android:layout_marginTop="20dp" >

                    <TextView
                        android:paddingRight="10dp"
                        android:text="@string/password"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/password_edit"
                        android:inputType="textPassword"
                        android:maxLength="25"
                        android:scrollHorizontally="true"
                        android:textSize="20sp" />
                </TableRow>

                <RadioGroup
                    android:id="@+id/net_radiogroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/gprs_radio"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/gprs" />
                    
                    <RadioButton 
                        android:id="@+id/G3_radio"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/G3" />

                    <RadioButton
                        android:id="@+id/wlan_radio"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/wlan" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/login_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="30dp"
                        android:layout_weight="1"
                        android:text="@string/log_in"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/maintain_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/maintain"
                        android:textSize="20sp" />
                </LinearLayout>
            </TableLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>