<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
            android:text="@string/input_tracking_no_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    
    <!-- Tracking Number -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/label_tracking_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText android:id="@+id/edit_tracking_number"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>
    
    <!-- Is Freight Collect -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/label_is_freight_collect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText android:id="@+id/edit_is_freight_collect"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>
    
    <!-- Is Agency -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/label_is_agency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText android:id="@+id/edit_is_agency"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>
    
     <!-- Freight -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/label_freight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText android:id="@+id/edit_freight"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>
    
     <!-- Cargo Amount -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/label_cargo_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText android:id="@+id/edit_cargo_amount"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>
    

</LinearLayout>
